Update README. Refactor files for clarity

--- a/p1/bert_multilingual.ipynb
+++ b/p1/bert_multilingual.ipynb
@@ -18,21 +18,27 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import time\n",
-    "import datetime\n",
-    "import gc\n",
-    "import random\n",
-    "from nltk.corpus import stopwords\n",
-    "import re\n",
-    "import os \n",
-    "\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler,random_split\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
+    "import datetime\n",
+    "import random\n",
+    "import os\n",
+    "from toolz.functoolz import pipe\n",
+    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
+    "from torch.utils.data import (\n",
+    "    TensorDataset,\n",
+    "    DataLoader,\n",
+    "    RandomSampler,\n",
+    "    SequentialSampler,\n",
+    "    random_split,\n",
+    ")\n",
     "\n",
-    "import transformers\n",
-    "from transformers import BertForSequenceClassification, AdamW, BertConfig,BertTokenizer,get_linear_schedule_with_warmup"
+    "from transformers import (\n",
+    "    BertForSequenceClassification,\n",
+    "    AdamW,\n",
+    "    BertConfig,\n",
+    "    BertTokenizer,\n",
+    "    get_linear_schedule_with_warmup,\n",
+    ")"
    ]
   },
   {
@@ -122,105 +128,11 @@
    "source": [
     "df = pd.DataFrame()\n",
     "\n",
-    "for json_file in os.listdir('dataset/jsonl'):\n",
-    "    df = pd.concat([df, pd.read_json('dataset/jsonl/' + json_file, lines=True)], ignore_index=True)\n",
+    "for json_file in os.listdir(\"dataset/jsonl\"):\n",
+    "    df = pd.concat(\n",
+    "        [df, pd.read_json(\"dataset/jsonl/\" + json_file, lines=True)], ignore_index=True\n",
+    "    )\n",
     "    print(f\"Added {json_file} to dataframe\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>worker_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>842571.000000</td>\n",
-       "      <td>842571.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>8564.718661</td>\n",
-       "      <td>24.453901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4955.577587</td>\n",
-       "      <td>53.960273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4273.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>8534.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>12837.000000</td>\n",
-       "      <td>27.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>17180.000000</td>\n",
-       "      <td>690.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  id      worker_id\n",
-       "count  842571.000000  842571.000000\n",
-       "mean     8564.718661      24.453901\n",
-       "std      4955.577587      53.960273\n",
-       "min         0.000000       0.000000\n",
-       "25%      4273.000000       6.000000\n",
-       "50%      8534.000000      14.000000\n",
-       "75%     12837.000000      27.000000\n",
-       "max     17180.000000     690.000000"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
    ]
   },
   {
@@ -403,8 +315,6 @@
     }
    ],
    "source": [
-    "from toolz.functoolz import pipe\n",
-    "\n",
     "df[\"locale\"] = df[\"locale\"].apply(lambda x: x.split(\"-\")[0])\n",
     "\n",
     "params = [\n",
@@ -414,10 +324,7 @@
     "]\n",
     "\n",
     "\n",
-    "df = pipe(\n",
-    "    df,\n",
-    "    *params\n",
-    ")\n",
+    "df = pipe(df, *params)\n",
     "\n",
     "\n",
     "df, encoder = encode_labels(df)\n",
@@ -431,8 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utterances = df['utt'].values\n",
-    "labels = df['intent'].values"
+    "utterances = df[\"utt\"].values\n",
+    "labels = df[\"intent\"].values"
    ]
   },
   {
@@ -452,9 +359,7 @@
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained('xlm-roberta-base')\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"xlm-roberta-base\")\n",
     "model = AutoModelForMaskedLM.from_pretrained(\"xlm-roberta-base\")"
    ]
   },
@@ -474,13 +379,13 @@
     }
    ],
    "source": [
-    "print(' Original: ', utterances[0])\n",
+    "print(\" Original: \", utterances[0])\n",
     "\n",
     "# Print the sentence split into tokens.\n",
-    "print('Tokenized: ', tokenizer.tokenize(utterances[0]))\n",
+    "print(\"Tokenized: \", tokenizer.tokenize(utterances[0]))\n",
     "\n",
     "# Print the sentence mapped to token ids.\n",
-    "print('Token IDs: ', tokenizer.convert_tokens_to_ids(tokenizer.tokenize(utterances[0])))"
+    "print(\"Token IDs: \", tokenizer.convert_tokens_to_ids(tokenizer.tokenize(utterances[0])))"
    ]
   },
   {
@@ -505,7 +410,7 @@
     "    # Update the maximum sentence length.\n",
     "    max_len = max(max_len, len(input_ids))\n",
     "\n",
-    "print('Max sentence length: ', max_len)"
+    "print(\"Max sentence length: \", max_len)"
    ]
   },
   {
@@ -551,20 +456,20 @@
     "    #   (5) Pad or truncate the sentence to `max_length`\n",
     "    #   (6) Create attention masks for [PAD] tokens.\n",
     "    encoded_dict = tokenizer.encode_plus(\n",
-    "                        utt,                      # Sentence to encode.\n",
-    "                        add_special_tokens = True, # Add '[CLS]' and '[SEP]'\n",
-    "                        max_length = max_len,           # Pad & truncate all sentences.\n",
-    "                        truncation = True,\n",
-    "                        padding = 'max_length',\n",
-    "                        return_attention_mask = True,   # Construct attn. masks.\n",
-    "                        return_tensors = 'pt',     # Return pytorch tensors.\n",
-    "                   )\n",
-    "    \n",
-    "    # Add the encoded sentence to the list.    \n",
-    "    input_ids.append(encoded_dict['input_ids'])\n",
-    "    \n",
+    "        utt,  # Sentence to encode.\n",
+    "        add_special_tokens=True,  # Add '[CLS]' and '[SEP]'\n",
+    "        max_length=max_len,  # Pad & truncate all sentences.\n",
+    "        truncation=True,\n",
+    "        padding=\"max_length\",\n",
+    "        return_attention_mask=True,  # Construct attn. masks.\n",
+    "        return_tensors=\"pt\",  # Return pytorch tensors.\n",
+    "    )\n",
+    "\n",
+    "    # Add the encoded sentence to the list.\n",
+    "    input_ids.append(encoded_dict[\"input_ids\"])\n",
+    "\n",
     "    # And its attention mask (simply differentiates padding from non-padding).\n",
-    "    attention_masks.append(encoded_dict['attention_mask'])\n",
+    "    attention_masks.append(encoded_dict[\"attention_mask\"])\n",
     "\n",
     "# Convert the lists into tensors.\n",
     "input_ids = torch.cat(input_ids, dim=0)\n",
@@ -572,8 +477,8 @@
     "labels = torch.tensor(labels)\n",
     "\n",
     "# Print sentence 0, now as a list of IDs.\n",
-    "print('Original: ', utterances[0])\n",
-    "print('Token IDs:', input_ids[0])"
+    "print(\"Original: \", utterances[0])\n",
+    "print(\"Token IDs:\", input_ids[0])"
    ]
   },
   {
@@ -589,14 +494,14 @@
     "\n",
     "# Calculate the number of samples to include in each set.\n",
     "train_size = int(0.8 * len(dataset))\n",
-    "#val_size = int(0.2 * len(dataset))\n",
-    "val_size = len(dataset)  - train_size\n",
+    "# val_size = int(0.2 * len(dataset))\n",
+    "val_size = len(dataset) - train_size\n",
     "\n",
     "# Divide the dataset by randomly selecting samples.\n",
     "train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
     "\n",
-    "print('{:>5,} training samples'.format(train_size))\n",
-    "print('{:>5,} validation samples'.format(val_size))"
+    "print(\"{:>5,} training samples\".format(train_size))\n",
+    "print(\"{:>5,} validation samples\".format(val_size))"
    ]
   },
   {
@@ -605,25 +510,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The DataLoader needs to know our batch size for training, so we specify it \n",
-    "# here. For fine-tuning BERT on a specific task, the authors recommend a batch \n",
+    "# The DataLoader needs to know our batch size for training, so we specify it\n",
+    "# here. For fine-tuning BERT on a specific task, the authors recommend a batch\n",
     "# size of 16 or 32.\n",
     "batch_size = 32\n",
     "\n",
     "# Create the DataLoaders for our training and validation sets.\n",
-    "# We'll take training samples in random order. \n",
+    "# We'll take training samples in random order.\n",
     "train_dataloader = DataLoader(\n",
-    "            train_dataset,  # The training samples.\n",
-    "            sampler = RandomSampler(train_dataset), # Select batches randomly\n",
-    "            batch_size = batch_size # Trains with this batch size.\n",
-    "        )\n",
+    "    train_dataset,  # The training samples.\n",
+    "    sampler=RandomSampler(train_dataset),  # Select batches randomly\n",
+    "    batch_size=batch_size,  # Trains with this batch size.\n",
+    ")\n",
     "\n",
     "# For validation the order doesn't matter, so we'll just read them sequentially.\n",
     "validation_dataloader = DataLoader(\n",
-    "            val_dataset, # The validation samples.\n",
-    "            sampler = SequentialSampler(val_dataset), # Pull out batches sequentially.\n",
-    "            batch_size = batch_size # Evaluate with this batch size.\n",
-    "        )"
+    "    val_dataset,  # The validation samples.\n",
+    "    sampler=SequentialSampler(val_dataset),  # Pull out batches sequentially.\n",
+    "    batch_size=batch_size,  # Evaluate with this batch size.\n",
+    ")"
    ]
   },
   {
@@ -632,9 +537,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if device == \"cuda:0\":\n",
-    "# # Tell pytorch to run this model on the GPU.\n",
-    "#     model = model.cuda()\n",
     "model = model.to(device)"
    ]
   },
@@ -644,10 +546,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = AdamW(model.parameters(),\n",
-    "                  lr = 2e-5, # args.learning_rate - default is 5e-5, our notebook had 2e-5\n",
-    "                  eps = 1e-8 # args.adam_epsilon  - default is 1e-8.\n",
-    "                )"
+    "optimizer = AdamW(\n",
+    "    model.parameters(),\n",
+    "    lr=2e-5,  # args.learning_rate - default is 5e-5, our notebook had 2e-5\n",
+    "    eps=1e-8,  # args.adam_epsilon  - default is 1e-8.\n",
+    ")"
    ]
   },
   {
@@ -656,19 +559,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of training epochs. The BERT authors recommend between 2 and 4. \n",
+    "# Number of training epochs. The BERT authors recommend between 2 and 4.\n",
     "# We chose to run for 4, but we'll see later that this may be over-fitting the\n",
     "# training data.\n",
     "epochs = 4\n",
     "\n",
-    "# Total number of training steps is [number of batches] x [number of epochs]. \n",
+    "# Total number of training steps is [number of batches] x [number of epochs].\n",
     "# (Note that this is not the same as the number of training samples).\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "\n",
     "# Create the learning rate scheduler.\n",
-    "scheduler = get_linear_schedule_with_warmup(optimizer, \n",
-    "                                            num_warmup_steps = 0, # Default value in run_glue.py\n",
-    "                                            num_training_steps = total_steps)"
+    "scheduler = get_linear_schedule_with_warmup(\n",
+    "    optimizer,\n",
+    "    num_warmup_steps=0,  # Default value in run_glue.py\n",
+    "    num_training_steps=total_steps,\n",
+    ")"
    ]
   },
   {
@@ -691,9 +596,9 @@
    "outputs": [],
    "source": [
     "def format_time(elapsed):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Takes a time in seconds and returns a string hh:mm:ss\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    # Round to the nearest second.\n",
     "    elapsed_rounded = int(round((elapsed)))\n",
     "    # Format as hh:mm:ss\n",
@@ -718,36 +623,38 @@
     "\n",
     "# For each epoch...\n",
     "for epoch_i in range(0, epochs):\n",
-    "    \n",
+    "\n",
     "    # ========================================\n",
     "    #               Training\n",
     "    # ========================================\n",
     "    # Perform one full pass over the training set.\n",
     "    print(\"\")\n",
-    "    print('======== Epoch {:} / {:} ========'.format(epoch_i + 1, epochs))\n",
-    "    print('Training...')\n",
+    "    print(\"======== Epoch {:} / {:} ========\".format(epoch_i + 1, epochs))\n",
+    "    print(\"Training...\")\n",
     "    # Measure how long the training epoch takes.\n",
     "    t0 = time.time()\n",
     "    total_train_loss = 0\n",
     "    model.train()\n",
     "    for step, batch in enumerate(train_dataloader):\n",
-    "        # Unpack this training batch from our dataloader. \n",
+    "        # Unpack this training batch from our dataloader.\n",
     "        #\n",
-    "        # As we unpack the batch, we'll also copy each tensor to the device using the \n",
+    "        # As we unpack the batch, we'll also copy each tensor to the device using the\n",
     "        # `to` method.\n",
     "        #\n",
     "        # `batch` contains three pytorch tensors:\n",
-    "        #   [0]: input ids \n",
+    "        #   [0]: input ids\n",
     "        #   [1]: attention masks\n",
-    "        #   [2]: labels \n",
+    "        #   [2]: labels\n",
     "        b_input_ids = batch[0].to(device)\n",
     "        b_input_mask = batch[1].to(device)\n",
     "        b_labels = batch[2].to(device)\n",
     "        optimizer.zero_grad()\n",
-    "        output = model(b_input_ids, \n",
-    "                             token_type_ids=None, \n",
-    "                             attention_mask=b_input_mask, \n",
-    "                             labels=b_labels)        \n",
+    "        output = model(\n",
+    "            b_input_ids,\n",
+    "            token_type_ids=None,\n",
+    "            attention_mask=b_input_mask,\n",
+    "            labels=b_labels,\n",
+    "        )\n",
     "        loss = output.loss\n",
     "        total_train_loss += loss.item()\n",
     "        # Perform a backward pass to calculate the gradients.\n",
@@ -763,8 +670,8 @@
     "        scheduler.step()\n",
     "\n",
     "    # Calculate the average loss over all of the batches.\n",
-    "    avg_train_loss = total_train_loss / len(train_dataloader)            \n",
-    "    \n",
+    "    avg_train_loss = total_train_loss / len(train_dataloader)\n",
+    "\n",
     "    # Measure how long this epoch took.\n",
     "    training_time = format_time(time.time() - t0)\n",
     "    print(\"\")\n",
@@ -781,7 +688,7 @@
     "    # Put the model in evaluation mode--the dropout layers behave differently\n",
     "    # during evaluation.\n",
     "    model.eval()\n",
-    "    # Tracking variables \n",
+    "    # Tracking variables\n",
     "    total_eval_accuracy = 0\n",
     "    best_eval_accuracy = 0\n",
     "    total_eval_loss = 0\n",
@@ -793,17 +700,19 @@
     "        b_labels = batch[2].to(device)\n",
     "        # Tell pytorch not to bother with constructing the compute graph during\n",
     "        # the forward pass, since this is only needed for backprop (training).\n",
-    "        with torch.no_grad():        \n",
-    "            output= model(b_input_ids, \n",
-    "                                   token_type_ids=None, \n",
-    "                                   attention_mask=b_input_mask,\n",
-    "                                   labels=b_labels)\n",
+    "        with torch.no_grad():\n",
+    "            output = model(\n",
+    "                b_input_ids,\n",
+    "                token_type_ids=None,\n",
+    "                attention_mask=b_input_mask,\n",
+    "                labels=b_labels,\n",
+    "            )\n",
     "        loss = output.loss\n",
     "        total_eval_loss += loss.item()\n",
     "        # Move logits and labels to CPU if we are using GPU\n",
     "        logits = output.logits\n",
     "        logits = logits.detach().cpu().numpy()\n",
-    "        label_ids = b_labels.to('cpu').numpy()\n",
+    "        label_ids = b_labels.to(\"cpu\").numpy()\n",
     "        # Calculate the accuracy for this batch of test sentences, and\n",
     "        # accumulate it over all batches.\n",
     "        total_eval_accuracy += flat_accuracy(logits, label_ids)\n",
@@ -815,25 +724,25 @@
     "    # Measure how long the validation run took.\n",
     "    validation_time = format_time(time.time() - t0)\n",
     "    if avg_val_accuracy > best_eval_accuracy:\n",
-    "        torch.save(model, 'bert_model')\n",
+    "        torch.save(model, \"bert_model\")\n",
     "        best_eval_accuracy = avg_val_accuracy\n",
-    "    #print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
-    "    #print(\"  Validation took: {:}\".format(validation_time))\n",
+    "    # print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
+    "    # print(\"  Validation took: {:}\".format(validation_time))\n",
     "    # Record all statistics from this epoch.\n",
     "    training_stats.append(\n",
     "        {\n",
-    "            'epoch': epoch_i + 1,\n",
-    "            'Training Loss': avg_train_loss,\n",
-    "            'Valid. Loss': avg_val_loss,\n",
-    "            'Valid. Accur.': avg_val_accuracy,\n",
-    "            'Training Time': training_time,\n",
-    "            'Validation Time': validation_time\n",
+    "            \"epoch\": epoch_i + 1,\n",
+    "            \"Training Loss\": avg_train_loss,\n",
+    "            \"Valid. Loss\": avg_val_loss,\n",
+    "            \"Valid. Accur.\": avg_val_accuracy,\n",
+    "            \"Training Time\": training_time,\n",
+    "            \"Validation Time\": validation_time,\n",
     "        }\n",
     "    )\n",
     "print(\"\")\n",
     "print(\"Training complete!\")\n",
     "\n",
-    "print(\"Total training took {:} (h:mm:ss)\".format(format_time(time.time()-total_t0)))"
+    "print(\"Total training took {:} (h:mm:ss)\".format(format_time(time.time() - total_t0)))"
    ]
   }
  ],
