--- a/p1/evaluation.ipynb
+++ b/p1/evaluation.ipynb
@@ -10,29 +10,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "%matplotlib inline \n",
-    "from sklearn.metrics import accuracy_score, f1_score\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, RocCurveDisplay, make_scorer, multilabel_confusion_matrix\n",
-    "from sklearn.model_selection import learning_curve\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
     "from imblearn.combine import SMOTETomek\n",
-    "from imblearn.under_sampling import TomekLinks\n",
-    "import datetime\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, StackingClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "# Adapted from https://scikit-learn.org/stable/auto_examples/model_selection/plot_learning_curve.html\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import learning_curve\n",
-    "from imblearn.pipeline import Pipeline"
+    "from imblearn.pipeline import Pipeline\n",
+    "from imblearn.under_sampling import TomekLinks"
    ]
   },
   {
@@ -42,16 +28,11 @@
    "outputs": [],
    "source": [
     "# Adapted from https://scikit-learn.org/stable/auto_examples/model_selection/plot_learning_curve.html\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import learning_curve\n",
-    "from imblearn.pipeline import Pipeline\n",
-    "\n",
     "def plot_learning_curve(\n",
     "    title,\n",
-    "    train_sizes, \n",
-    "    train_scores, \n",
-    "    test_scores, \n",
+    "    train_sizes,\n",
+    "    train_scores,\n",
+    "    test_scores,\n",
     "    fit_times,\n",
     "    score_times,\n",
     "    axes=None,\n",
@@ -122,7 +103,7 @@
     "    axes = axes.reshape(-1)\n",
     "    fig.subplots_adjust(hspace=0.5, wspace=0.5)\n",
     "    fig = fig.delaxes(axes[-1])\n",
-    "    \n",
+    "\n",
     "    axes[0].set_title(title)\n",
     "    if ylim is not None:\n",
     "        axes[0].set_ylim(*ylim)\n",
@@ -231,100 +212,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(model, testing_inputs, testing_classes, encoder, indices, sample_weight=None):\n",
+    "def evaluate_model(\n",
+    "    model, testing_inputs, testing_classes, encoder, indices, sample_weight=None\n",
+    "):\n",
     "    \"\"\"\n",
     "    This helper function prints the report and evaluation metrics for the model.\n",
     "    \"\"\"\n",
     "    predictions = model.predict(testing_inputs)\n",
     "\n",
-    "    print(\"=\"*70)\n",
+    "    print(\"=\" * 70)\n",
     "    print(f\"Evaluation metrics for {model.__class__.__name__}\")\n",
-    "    print(\"=\"*70)\n",
+    "    print(\"=\" * 70)\n",
     "\n",
-    "    score = model.score(testing_inputs, testing_classes) \n",
+    "    score = model.score(testing_inputs, testing_classes)\n",
     "    print(f\"{model.__class__.__name__}'s default score metric: {score}\")\n",
-    "\n",
     "\n",
     "    print(f\"Classification report\")\n",
     "    print(\n",
-    "        classification_report(testing_classes, predictions, sample_weight=sample_weight, digits=4, zero_division=1)\n",
+    "        classification_report(\n",
+    "            testing_classes,\n",
+    "            predictions,\n",
+    "            sample_weight=sample_weight,\n",
+    "            digits=4,\n",
+    "            zero_division=1,\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    accuracy = accuracy_score(testing_classes, predictions, sample_weight=sample_weight)\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n",
     "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='macro'):.4f}\")\n",
-    "    \n",
+    "\n",
     "    if not indices:\n",
     "        return\n",
-    "    \n",
+    "\n",
     "    for lang in indices.keys():\n",
-    "        accuracy_lang = accuracy_score(testing_classes[indices[lang]], predictions[indices[lang]], sample_weight=sample_weight)\n",
+    "        accuracy_lang = accuracy_score(\n",
+    "            testing_classes[indices[lang]],\n",
+    "            predictions[indices[lang]],\n",
+    "            sample_weight=sample_weight,\n",
+    "        )\n",
     "        print(f\"Accuracy for {lang}: {accuracy_lang:.4f}\")\n",
     "\n",
     "    print(\"\\n\\n\")\n",
-    "    \n",
+    "\n",
     "    for lang in indices.keys():\n",
-    "        f1_lang = f1_score(testing_classes[indices[lang]], predictions[indices[lang]], average='macro')\n",
+    "        f1_lang = f1_score(\n",
+    "            testing_classes[indices[lang]], predictions[indices[lang]], average=\"macro\"\n",
+    "        )\n",
     "        print(f\"F1-score for {lang}: {f1_lang:.4f}\")\n",
-    "    \n",
-    "    \n",
-    "    for lang in ['en', 'ja', 'zh', 'ar']:\n",
+    "\n",
+    "    for lang in [\"en\", \"ja\", \"zh\", \"ar\"]:\n",
     "        if lang not in indices.keys():\n",
     "            continue\n",
-    "            \n",
-    "        plt.figure(figsize = (40,28))\n",
+    "\n",
+    "        plt.figure(figsize=(40, 28))\n",
     "        freq = pd.crosstab(\n",
-    "            decode_labels(testing_classes[indices[lang]], encoder), \n",
-    "            decode_labels(predictions[indices[lang]], encoder), \n",
-    "            normalize='index', rownames=['Actual'], colnames=['Predicted'])\n",
+    "            decode_labels(testing_classes[indices[lang]], encoder),\n",
+    "            decode_labels(predictions[indices[lang]], encoder),\n",
+    "            normalize=\"index\",\n",
+    "            rownames=[\"Actual\"],\n",
+    "            colnames=[\"Predicted\"],\n",
+    "        )\n",
     "        freq = np.round(freq, 3)\n",
     "        ax = plt.axes()\n",
     "        sns.heatmap(freq, annot=True)\n",
-    "        ax.set_title(f'Confusion matrix for {lang}')\n",
+    "        ax.set_title(f\"Confusion matrix for {lang}\")\n",
     "        plt.show()\n",
     "\n",
-    "    print(\"=\"*70)\n",
+    "    print(\"=\" * 70)\n",
     "\n",
-    "def train_and_evaluate(input_cols, output_cols, model, params, scoring, n_iter=None, sample_weight=None, random_state=42, oversample=False, indices=None, encoder=None):\n",
+    "\n",
+    "def train_and_evaluate(\n",
+    "    df,\n",
+    "    input_cols,\n",
+    "    output_cols,\n",
+    "    model,\n",
+    "    params,\n",
+    "    scoring,\n",
+    "    n_iter=None,\n",
+    "    sample_weight=None,\n",
+    "    random_state=42,\n",
+    "    oversample=False,\n",
+    "    indices=None,\n",
+    "    encoder=None,\n",
+    "):\n",
     "    \"\"\"\n",
     "    This function trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
     "    \"\"\"\n",
-    "    training_inputs = df[df['partition'] != 'test'][input_cols].values\n",
-    "    testing_inputs = df[df['partition'] == 'test'][input_cols].values\n",
-    "    training_classes = df[df['partition'] != 'test'][output_cols].values\n",
-    "    testing_classes = df[df['partition'] == 'test'][output_cols].values\n",
-    "    \n",
-    "    pipeline = Pipeline([('model', model)])\n",
-    "    \n",
-    "    if (oversample):\n",
-    "        pipeline = Pipeline([\n",
-    "            ('resampler', SMOTETomek(tomek=TomekLinks(sampling_strategy='majority'))),\n",
-    "            ('model', model)\n",
-    "        ])\n",
-    "    \n",
+    "    training_inputs = df[df[\"partition\"] != \"test\"][input_cols].values\n",
+    "    testing_inputs = df[df[\"partition\"] == \"test\"][input_cols].values\n",
+    "    training_classes = df[df[\"partition\"] != \"test\"][output_cols].values\n",
+    "    testing_classes = df[df[\"partition\"] == \"test\"][output_cols].values\n",
+    "\n",
+    "    pipeline = Pipeline([(\"model\", model)])\n",
+    "\n",
+    "    if oversample:\n",
+    "        pipeline = Pipeline(\n",
+    "            [\n",
+    "                (\n",
+    "                    \"resampler\",\n",
+    "                    SMOTETomek(tomek=TomekLinks(sampling_strategy=\"majority\")),\n",
+    "                ),\n",
+    "                (\"model\", model),\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
     "    if n_iter == None:\n",
     "        clf = GridSearchCV(pipeline, params, n_jobs=-1, scoring=scoring, verbose=0)\n",
     "    else:\n",
     "        clf = RandomizedSearchCV(\n",
-    "                pipeline, params, n_iter=n_iter, scoring=scoring,\n",
-    "                n_jobs=-1, random_state=random_state, verbose=0)\n",
-    "    \n",
+    "            pipeline,\n",
+    "            params,\n",
+    "            n_iter=n_iter,\n",
+    "            scoring=scoring,\n",
+    "            n_jobs=-1,\n",
+    "            random_state=random_state,\n",
+    "            verbose=0,\n",
+    "        )\n",
+    "\n",
     "    resclf = clf.fit(training_inputs, training_classes)\n",
     "\n",
     "    if isinstance(model, DecisionTreeClassifier):\n",
-    "        plot_tree(resclf.best_estimator_['model'], feature_names=input_cols)\n",
-    "        plt.savefig(f'output/{model.__class__.__name__}_tree_diagram.svg')\n",
-    "    \n",
-    "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
-    "        \n",
-    "    evaluate_model(clf, testing_inputs, testing_classes, encoder, indices, sample_weight=sample_weight)\n",
-    "    return resclf.best_estimator_['model']\n",
+    "        plot_tree(resclf.best_estimator_[\"model\"], feature_names=input_cols)\n",
+    "        plt.savefig(f\"output/{model.__class__.__name__}_tree_diagram.svg\")\n",
     "\n",
-    "def train_and_use_model(model, params, scoring='f1_macro', n_iter=None, sample_weight=None, random_state=42, oversample=False, indices=None, encoder=None):\n",
+    "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
+    "\n",
+    "    evaluate_model(\n",
+    "        clf,\n",
+    "        testing_inputs,\n",
+    "        testing_classes,\n",
+    "        encoder,\n",
+    "        indices,\n",
+    "        sample_weight=sample_weight,\n",
+    "    )\n",
+    "    return resclf.best_estimator_[\"model\"]\n",
+    "\n",
+    "\n",
+    "def train_and_use_model(\n",
+    "    df,\n",
+    "    input_cols,\n",
+    "    output_cols,\n",
+    "    model,\n",
+    "    params,\n",
+    "    scoring=\"f1_macro\",\n",
+    "    n_iter=None,\n",
+    "    sample_weight=None,\n",
+    "    random_state=42,\n",
+    "    oversample=False,\n",
+    "    indices=None,\n",
+    "    encoder=None,\n",
+    "):\n",
     "    \"\"\"\n",
     "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
     "    \"\"\"\n",
-    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, oversample=oversample, indices=indices, encoder=encoder)"
+    "    return train_and_evaluate(\n",
+    "        df,\n",
+    "        input_cols,\n",
+    "        output_cols,\n",
+    "        model,\n",
+    "        params,\n",
+    "        sample_weight=sample_weight,\n",
+    "        n_iter=n_iter,\n",
+    "        random_state=random_state,\n",
+    "        scoring=scoring,\n",
+    "        oversample=oversample,\n",
+    "        indices=indices,\n",
+    "        encoder=encoder,\n",
+    "    )"
    ]
   }
  ],
@@ -335,8 +390,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.10"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
