--- a/p1/preprocess_lang.ipynb
+++ b/p1/preprocess_lang.ipynb
@@ -26,7 +26,7 @@
     "    \"pt\": \"portuguese\",\n",
     "    \"ro\": \"romanian\",\n",
     "    \"ru\": \"russian\",\n",
-    "    \"es\": \"spanish\",\n",
+    "    \"es  \": \"spanish\",\n",
     "    \"sv\": \"swedish\",\n",
     "}"
    ]
@@ -84,7 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lemmatize(lemmatizer: Callable[[str], str], utterance: list[str], language: str) -> list[str]:\n",
+    "def lemmatize(\n",
+    "    lemmatizer: Callable[[str], str], utterance: list[str], language: str\n",
+    ") -> list[str]:\n",
     "    \"\"\"\n",
     "    Lemmatizes the utterance after tokenizing it\n",
     "    \"\"\"\n",
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
