--- a/p1/preprocess_nolang.ipynb
+++ b/p1/preprocess_nolang.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from polyglot.text import Text\n",
     "from IPython.utils import io\n",
-    "import pandas as pd"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -19,13 +21,13 @@
    "source": [
     "def remove_punctuation(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Remove punctuation from text\"\"\"\n",
-    "    data[\"utt\"] = data[\"utt\"].str.replace(r\"[^\\w\\s]\",\"\", regex=True)\n",
+    "    data[\"utt\"] = data[\"utt\"].str.replace(r\"[^\\w\\s]\", \"\", regex=True)\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "import numpy as np\n",
-    "\n",
     "def encode_labels(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Encode labels\"\"\"\n",
     "    le = LabelEncoder()\n",
-    "    le.fit(data['intent'])\n",
-    "    data['intent'] = le.transform(data['intent'])\n",
-    "    return data, le\n"
+    "    le.fit(data[\"intent\"])\n",
+    "    data[\"intent\"] = le.transform(data[\"intent\"])\n",
+    "    return data, le"
    ]
   },
   {
@@ -106,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
